fixing translator